load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "dynamixel_controller",
    srcs = ["dynamixel_controller.cpp"],
    hdrs = ["dynamixel_controller.h"],
    copts = ["-std=c++20"],
    include_prefix = "roboflex/dynamixel",
    visibility = ["//visibility:public"],
    deps = [
        "//core:roboflex_core",
        "//third_party:dynamixel_sdk",
    ],
)

cc_library(
    name = "dynamixel",
    srcs = ["dynamixel.cpp"],
    hdrs = ["dynamixel.h"],
    copts = ["-std=c++20"],
    include_prefix = "roboflex/dynamixel",
    data = ['__init__.py'],
    visibility = ["//visibility:public"],
    deps = [
        ":dynamixel_controller",
        "//core:roboflex_core",
        "//third_party:dynamixel_sdk",
    ],
)
