load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "profiler",
    srcs = ["profiler.cpp"],
    hdrs = ["profiler.h"],
    copts = ["-std=c++2a"],
    include_prefix = "roboflex/metrics_central",
    visibility = ["//visibility:public"],
    deps = [
        "//core:roboflex_core",
        "//transport/mqtt:mqtt",
    ],
)

cc_binary(
    name = "metrics_central",
    srcs = [
        "metrics_central_impl.h",
        "metrics_central_impl.cpp",
        "metrics_central.cpp",
    ],
    copts = ["-std=c++20"],
    deps = [
        "//third_party:imgui",
        "//third_party:implot",
        "//core:roboflex_core",
        "//transport/mqtt:mqtt",
        "@boost//:program_options",
    ],
)