load("@rules_cc//cc:defs.bzl", "cc_library")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

cc_library(
    name = "visualization",
    srcs = ["visualization.cpp"],
    hdrs = ["visualization.h"],
    copts = ["-std=c++2a"],
    include_prefix = "roboflex/visualization",
    visibility = ["//visibility:public"],
    deps = [
        "//core:roboflex_core",
        "//third_party:sdl2",
    ],
)

pybind_extension(
    name = "roboflex_visualization_ext",
    srcs = ["pybindings.cpp"],
    copts = ["-std=c++2a"],
    visibility = ["//visibility:public"],
    deps = ["//visualization"],
)

py_library(
    name = "roboflex_visualization_python",
    srcs = ["__init__.py"],
    data = [":roboflex_visualization_ext.so"],
    visibility = ["//visibility:public"],
)
