load("@rules_cc//cc:defs.bzl", "cc_library")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

cc_library(
    name = "webcam_uvc",
    srcs = ["webcam_uvc.cpp"],
    hdrs = ["webcam_uvc.h"],
    copts = ["-std=c++2a"],
    include_prefix = "roboflex/webcam_uvc",
    visibility = ["//visibility:public"],
    deps = [
        "//core:roboflex_core",
        "//third_party:libuvc",
        "//third_party:libjpeg",
        "//third_party:usb-1.0",
    ],
)

pybind_extension(
    name = "roboflex_webcam_uvc_ext",
    srcs = ["pybindings.cpp"],
    copts = ["-std=c++2a"],
    visibility = ["//visibility:public"],
    deps = ["//webcam_uvc"],
)

py_library(
    name = "roboflex_webcam_uvc_python",
    srcs = ["__init__.py"],
    data = [":roboflex_webcam_uvc_ext.so"],
    visibility = ["//visibility:public"],
)
