load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "webcam_uvc",
    srcs = ["webcam_uvc.cpp"],
    hdrs = ["webcam_uvc.h"],
    copts = ["-std=c++20"],
    include_prefix = "roboflex/webcam_uvc",
    visibility = ["//visibility:public"],
    deps = [
        "@roboflex_core//:roboflex_core",
        "//third_party:libuvc",
        "//third_party:libjpeg",
        "//third_party:usb-1.0",
    ],
)
