load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

py_binary(
    name = "test_python",
    srcs = ["test_python.py"],
    deps = [
        "//core/python:roboflex_core_python",
        "//dynamixel/python:roboflex_dynamixel_python",
        #"//transport/zmq:robocore_zmq_python",
    ],
)
