load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

py_binary(
    name = "camera_follow",
    srcs = glob([
        "camera_follow.py", 
        "facedetect.py", 
        "yoloface/facedetector.py", 
        "yoloface/__init__.py", 
        "yoloface/models/*.py",
    ]),
    data = glob(["yoloface/models/*.yaml"]),
    deps = [
        "//core/python:roboflex_core_python",
        "//webcam_uvc:roboflex_webcam_uvc_python",
        "//visualization:roboflex_visualization_python",
        "//transport/zmq/python:roboflex_transport_zmq_python",
        "//dynamixel/python:roboflex_dynamixel_python",
        "//metrics_central:roboflex_profiler_python",
    ],
)