cc_binary(
    name = "realsense_tv_cpp",
    srcs = ["realsense_tv_cpp.cpp"],
    copts = ["-std=c++20"],
    deps = [
        "//core:roboflex_core",
        "//realsense:realsense",
        "//visualization:visualization",
    ],
)

py_binary(
    name = "realsense_tv_py",
    srcs = ["realsense_tv_py.py"],
    deps = [
        "//core/python:roboflex_core_python",
        "//realsense:roboflex_realsense_python",
        "//visualization:roboflex_visualization_python",
    ],
)

py_binary(
    name = "realsense_tv_with_profile_py",
    srcs = ["realsense_tv_with_profile_py.py"],
    deps = [
        "//core/python:roboflex_core_python",
        "//realsense:roboflex_realsense_python",
        "//visualization:roboflex_visualization_python",
        "//transport/zmq/python:roboflex_transport_zmq_python",
        "//metrics_central:roboflex_profiler_python",
    ],
)
