load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")

py_binary(
    name = "webcam_fastsam",
    srcs = glob([
        "webcam_fastsam.py", 
        "facedetect.py", 
        "submodules/FastSAM/fastsam/*.py",
    ]),
    data = glob(["models/*.pt"]),
    deps = [
        "//core/python:roboflex_core_python",
        "//webcam_uvc:roboflex_webcam_uvc_python",
        "//visualization:roboflex_visualization_python",
        "//transport/tq/python:roboflex_transport_tq_python",
        "//metrics_central:roboflex_profiler_python",
    ],
)