cc_binary(
    name = "webcam_tv_cpp",
    srcs = ["webcam_tv_cpp.cpp"],
    copts = ["-std=c++20"],
    deps = [
        "//core:roboflex_core",
        "//webcam_uvc:webcam_uvc",
        "//visualization:visualization",
    ],
)

py_binary(
    name = "webcam_tv_py",
    srcs = ["webcam_tv_py.py"],
    deps = [
        "//core/python:roboflex_core_python",
        "//webcam_uvc:roboflex_webcam_uvc_python",
        "//visualization:roboflex_visualization_python",
     ],
)
